test_data/Json/ContainedInEnvironment/Unexpected/Unserializable/InvalidModelType/DataSpecificationIec61360/invalidModelType.json.exception
assetAdministrationShells[0].embeddedDataSpecifications[0].dataSpecificationContent: Unexpected model type for DataSpecificationContent: aCompletelyInvalidModelType